manifests/mariadb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mariadb
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mariab
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: soplanning
        - name: MYSQL_PASSWORD
          value: soplanning
        - name: MYSQL_ROOT_PASSWORD
          value: password
        - name: MYSQL_USER
          value: soplanning
        image: mariadb/server:10.4
        name: mariadb
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-persistent-storage
      restartPolicy: Always
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mariab-pv-claim
