manifests/site-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: site
  name: site
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: site
    spec:
      containers:
      - image: site
        name: site
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - mountPath: /var/www/html
          name: site-claim0
      restartPolicy: Always
      volumes:
      - name: site-claim0
        persistentVolumeClaim:
          claimName: site-claim0
status: {}
