manifests/soplanning-app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: soplanning
  namespace: soplanning
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: soplanning
    spec:
      securityContext:
        fsGroup: 33
      containers:
      - image: quay.io/rverchere/soplanning
        name: soplanning
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/www/html/smarty/templates_c
          name: soplanning
      nodeSelector:
        datacenter: west
      restartPolicy: Always
      volumes:
      - name: soplanning
        emptyDir: {}
