manifests/soplanning-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soplanning
  namespace: soplanning
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
  selector:
    app: soplanning
