manifests/soplanning-mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: soplanning
spec:
  ports:
  - port: 3306
    protocol: TCP
  selector:
    app: freebox-exporter
